package EjerciciosClase.ClasesYObjetos.Buscaminas;

public class Interfaz {
    Tablero tablero;

    public Interfaz() {
        tablero = null;
    }

    public void iniciarJuego() {

    }

    public void destaparCasilla(int fila, int columna) {

    }
    public void marcarCasilla(int fila, int columna) {

    }
    public void finJuego(boolean ganador) {

    }
}
